add swagger, redis and rate limit middleware
